# 3DBattle_multiplayer

./: README.md
3DBattle_C++_client/: CMakeLists.txt  ChooseColumn.h  ChooseCube.h  Cube.h  DisplayCubes.h  Painting.h  Text.h  WorkWithKeys.h  client.h  forEnter1.h  forEnter3.h  forEnter5_OneCube.h  forEnter5_TwoCubes.h  hitSide_Player1.h  main.cpp
3DBattle_python_server/: .maps.json  bot.py  funcs.py  main.py
3DSeaBattle-Alik/: ChooseColumn.h  DisplayCubes.h  Painting.h  TwoPlayersEnter1.h  WorkWithKeys.h  client.h  forEnter3.h  forEnter5_OneCube.h  main.cpp
